spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_fake_named_arg.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn test(a: bool, b: bool) -> bool __builtin__
fn main() -> bool {
    test$(a: true, c: true, b: true)
}


error: No such argument: c
  ┌─ testinput:3:20
  │
1 │ fn test(a: bool, b: bool) -> bool __builtin__
  │ --------------------------------------------- function defined here
2 │ fn main() -> bool {
3 │     test$(a: true, c: true, b: true)
  │                    ^ No such argument


